--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -11,7 +11,7 @@ general:
     save_ref_srcs   : true                               # Store referenze sources into region file
     
 ressources:                      
-    load_method      : "VASCA"                     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_method      : "MAST_LOCAL"                     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    : "ALL"                       # Data products from MAST:  "NONE", "TABLES" for tables and reference image, "ALL" for tables and visit images
     field_kwargs:
         data_path        : null
@@ -72,11 +72,12 @@ observations:
         det_quality:
             table    : "tt_detections"
             sel_type : "and"  # These are all AND selections
+            # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
             range:
                 s2n            : [3.5,.inf]
                 r_fov          : [0.0,0.55]
-                point_src_prob : [0.6,1.0]
-                bright_match   : [-0.5,0.5]
+                class_star     : [0.6,1.0]        # Extension classifier (extended=0, point like=1)
+                chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
             bitmask:
                 # Specify the artifacts to remove
                 # For GALEX a description is at the end of this document
@@ -95,6 +96,11 @@ observations:
             range:
                 s2n            : [3.5,.inf]
                 r_fov          : [0.0,0.55]
+            # bitmask:
+            #     # Specify the artifacts to remove
+            #     # For GALEX a description is at the end of this document
+            #     artifacts : [1,2,4,8,128]
+
             
     obs_field_ids :
         # All TDS fields
@@ -112,13 +118,13 @@ observations:
         # - 2593934984603500544  #PS_CDFS_MOS04
         # - 2594005353347678208  #PS_CDFS_MOS05
         # - 2594075722091855872  #PS_CDFS_MOS06
-        # - 2597312684324028416  #PS_ELAISN1_MOS10
-        # - 2597383053068206080  #PS_ELAISN1_MOS11
-        # - 2597453421812383744  #PS_ELAISN1_MOS12
-        # - 2597523790556561408  #PS_ELAISN1_MOS13
+        - 2597312684324028416  #PS_ELAISN1_MOS10
+        - 2597383053068206080  #PS_ELAISN1_MOS11
+        - 2597453421812383744  #PS_ELAISN1_MOS12
+        - 2597523790556561408  #PS_ELAISN1_MOS13
         - 2597594159300739072  #PS_ELAISN1_MOS14
         - 2597664528044916736  #PS_ELAISN1_MOS15
-        # - 2597734896789094400  #PS_ELAISN1_MOS16
+        - 2597734896789094400  #PS_ELAISN1_MOS16
         # - 2597875634277449728  #PS_VVDS22H_MOS00
         # - 2597946003021627392  #PS_VVDS22H_MOS01
         # - 2598016371765805056  #PS_VVDS22H_MOS02
