--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -38,21 +38,32 @@ cluster_coadd_dets:
         n_jobs        : 3
         max_iter      : 300
         table_name    : "tt_coadd_detections"
+
+assoc_src_coadd:
+    dist_max      : 1        # Associate nearest source below this distance in arc_sec  OR
+    dist_s2n_max  : 3        # Associate nearest source with this distance in units of "squared sumed position error"
+    
         
 selection:
-    src_quality:
-        table    : "tt_sources"
-        sel_type : "and"    # These are OR selections
-        range:
-            nr_det        : [2,.inf]          
     src_variability:
-        table    : "tt_sources"
-        sel_type : "and"
-        range:        
+        table       : "tt_sources"
+        presel_type : "and"
+        sel_type    : "and"
+        range:
+            nr_det         : [2,.inf]
+            pos_cpval      : [0.0000000001,.inf]            
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
-            pos_cpval      : [0.0000000001,.inf] 
             flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
             flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
+    src_coadd_diff:
+        table       : "tt_sources"
+        presel_type : "or"
+        sel_type    : "and"
+        range:
+            nr_det          : [2,.inf]
+            pos_cpval       : [0.0000000001,.inf]    
+            assoc_ffactor   : [1.5,.inf]
+            assoc_fdiff_s2n : [7,.inf]
                     
 observations:
   - observatory   : "GALEX"
@@ -70,8 +81,9 @@ observations:
 
     selection:
         det_quality:
-            table    : "tt_detections"
-            sel_type : "and"  # These are all AND selections
+            table       : "tt_detections"
+            presel_type : "and"
+            sel_type    : "and"
             # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
             range:
                 s2n            : [3.5,.inf]
@@ -85,22 +97,19 @@ observations:
             #If below/above this value will set it to min/max
             set_range:
                 pos_err : [0.5,5] # In arcsec
-        det_association : 
-            table     : "tt_detections"
-            ref_table : "tt_sources"
-            sel_type  : "is_in"
-            var       : "fd_src_id"
+        det_association :
+            table       : "tt_detections"
+            ref_table   : "tt_sources"
+            presel_type : "and"
+            sel_type    : "is_in"
+            var         : "fd_src_id"
         coadd_det_quality:
             table    : "tt_coadd_detections"
+            presel_type : "and"
             sel_type : "and"  # These are all AND selections
             range:
                 s2n            : [4,.inf]
                 r_fov          : [0.0,0.55]
-            # bitmask:
-            #     # Specify the artifacts to remove
-            #     # For GALEX a description is at the end of this document
-            #     artifacts : [1,2,4,8,128]
-
             
     obs_field_ids :
         # All TDS fields
@@ -118,13 +127,13 @@ observations:
         # - 2593934984603500544  #PS_CDFS_MOS04
         # - 2594005353347678208  #PS_CDFS_MOS05
         # - 2594075722091855872  #PS_CDFS_MOS06
-        # - 2597312684324028416  #PS_ELAISN1_MOS10
-        # - 2597383053068206080  #PS_ELAISN1_MOS11
-        # - 2597453421812383744  #PS_ELAISN1_MOS12
-        # - 2597523790556561408  #PS_ELAISN1_MOS13
+        - 2597312684324028416  #PS_ELAISN1_MOS10
+        - 2597383053068206080  #PS_ELAISN1_MOS11
+        - 2597453421812383744  #PS_ELAISN1_MOS12
+        - 2597523790556561408  #PS_ELAISN1_MOS13
         - 2597594159300739072  #PS_ELAISN1_MOS14
         - 2597664528044916736  #PS_ELAISN1_MOS15
-        # - 2597734896789094400  #PS_ELAISN1_MOS16
+        - 2597734896789094400  #PS_ELAISN1_MOS16
         # - 2597875634277449728  #PS_VVDS22H_MOS00
         # - 2597946003021627392  #PS_VVDS22H_MOS01
         # - 2598016371765805056  #PS_VVDS22H_MOS02
