--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -38,26 +38,31 @@ cluster_coadd_dets:
         n_jobs        : 3
         max_iter      : 300
         table_name    : "tt_coadd_detections"
+  
+assoc_src_coadd:
+    dist_max      : 1        # Associate nearest source below this distance in arc_sec  OR
+    dist_s2n_max  : 3        # Associate nearest source with this distance in units of "squared sumed position error"
+    
         
 selection:
-    src_quality:
-        table    : "tt_sources"
-        sel_type : "and"                                     # These are OR selections
-        range:
-            nr_det        : [1,.inf]          
     src_variability:
-        table    : "tt_sources"
-        sel_type : "and"
-        range:        
-            flux_cpval     : [-0.5,0.001]  
-            pos_cpval      : [0.00000001,.inf] 
-            flux_nxv       : [0.0006,.inf] 
-
-    det_association : 
-        table     : "tt_detections"
-        ref_table : "tt_sources"
-        sel_type  : "is_in"
-        var       : "rg_src_id"
+        table       : "tt_sources"
+        presel_type : "and"
+        sel_type    : "and"
+        range:
+            nr_det         : [2,.inf]
+            pos_cpval      : [0.0000001,.inf]            
+            flux_cpval     : [-0.5,0.000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
+            flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
+            flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
+    src_coadd_diff:
+        table       : "tt_sources"
+        presel_type : "or"
+        sel_type    : "and"
+        range:
+            nr_det          : [1,.inf]   
+            assoc_ffactor   : [2.0,.inf]
+            assoc_fdiff_s2n : [3,.inf]
                     
 observations:
   - observatory   : "GALEX"
@@ -76,25 +81,28 @@ observations:
 
     selection:
         det_quality:
-            table    : "tt_detections"
-            sel_type : "and"                                # These are all AND selections
+            table       : "tt_detections"
+            presel_type : "and"
+            sel_type    : "and"                                # These are all AND selections
             range:
                 s2n            : [3.5,.inf]
                 r_fov          : [0.0,0.55]
-                point_src_prob : [0.5,1.0]
-                bright_match   : [-0.5,0.5]
+                class_star     : [0.5,1.0]
+                chkobj_type    : [-0.5,0.5]
                 mag            : [16,26]
             bitmask:
                 artifacts : [2,4]
             set_range:
                 pos_err : [0.5,5] # 1 arcsec = 0.0002777, 0.5 arcsec = 0.0001389
         coadd_det_quality:
-            table    : "tt_coadd_detections"
-            sel_type : "and"  # These are all AND selections
+            table       : "tt_coadd_detections"
+            presel_type : "and"
+            sel_type    : "and"  # These are all AND selections
             range:
-                s2n            : [3.5,.inf]
+                s2n            : [4.0,.inf]
                 r_fov          : [0.0,0.55]
-        det_association : 
+        det_association :
+            presel_type : "and"
             table     : "tt_detections"
             ref_table : "tt_sources"
             sel_type  : "is_in"
