Adding filter_id
Former-commit-id: cc0a7f92704aed29b8c0d3ea559277715766388c

--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -49,7 +49,7 @@ selection:
         table       : "tt_sources"
         presel_type : "and"
         sel_type    : "and"
-        obs_filter  : "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
+        obs_filter_idx  : 0                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
             nr_det         : [2,.inf]
             pos_cpval      : [0.0000000001,.inf]            
@@ -65,7 +65,7 @@ selection:
             assoc_ffactor   : [2.0,.inf]
             assoc_fdiff_s2n : [7,.inf]
 
-obs_filters: ["NUV","FUV"]                              # Predefine filters to be used
+#obs_filters: ["NUV","FUV"]                              # Predefine filters to be used
                     
 observations:
   - observatory   : "GALEX"
