--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
   "scikit_learn ~= 1.0.2",
   "setuptools ~= 65.4.1",
   "regions ~= 0.6",
-  "yamlinclude ~= 1.3"
+  "pyyaml-include ~= 1.3"
 ]
 
 [project.urls]
