--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -60,6 +60,7 @@ selection:
         table       : "tt_sources"
         presel_type : "or"
         sel_type    : "and"
+        obs_filter  : "NUV" 
         range:
             nr_det          : [1,.inf]   
             assoc_ffactor   : [2.0,.inf]
@@ -113,52 +114,52 @@ observations:
             
     obs_field_ids : !include field_ids.yaml
 
-  - observatory   : "GALEX"
-    obs_filter    : "FUV"
-    cluster_det:
-        meanshift:
-            bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
-            seeds         : null
-            bin_seeding   : false
-            min_bin_freq  : 1
-            cluster_all   : true
-            n_jobs        : null
-            max_iter      : 300
-            table_name    : "tt_detections"
+  # - observatory   : "GALEX"
+  #   obs_filter    : "FUV"
+  #   cluster_det:
+  #       meanshift:
+  #           bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
+  #           seeds         : null
+  #           bin_seeding   : false
+  #           min_bin_freq  : 1
+  #           cluster_all   : true
+  #           n_jobs        : null
+  #           max_iter      : 300
+  #           table_name    : "tt_detections"
 
-    selection:
-        det_quality:
-            table       : "tt_detections"
-            presel_type : "and"
-            sel_type    : "and"
-            # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
-            range:
-                s2n            : [3.5,.inf]
-                r_fov          : [0.0,0.55]
-                class_star     : [0.6,1.0]        # Extension classifier (extended=0, point like=1)
-                chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-            bitmask:
-                # Specify the artifacts to remove
-                # For GALEX a description is at the end of this document
-                artifacts : [1,2,4,8,128]
-            #If below/above this value will set it to min/max
-            set_range:
-                pos_err : [0.5,5] # In arcsec
-        det_association :
-            table       : "tt_detections"
-            ref_table   : "tt_sources"
-            presel_type : "and"
-            sel_type    : "is_in"
-            var         : "fd_src_id"
-        coadd_det_quality:
-            table    : "tt_coadd_detections"
-            presel_type : "and"
-            sel_type : "and"  # These are all AND selections
-            range:
-                s2n            : [4,.inf]
-                r_fov          : [0.0,0.55]
+  #   selection:
+  #       det_quality:
+  #           table       : "tt_detections"
+  #           presel_type : "and"
+  #           sel_type    : "and"
+  #           # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
+  #           range:
+  #               s2n            : [3.5,.inf]
+  #               r_fov          : [0.0,0.55]
+  #               class_star     : [0.6,1.0]        # Extension classifier (extended=0, point like=1)
+  #               chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
+  #           bitmask:
+  #               # Specify the artifacts to remove
+  #               # For GALEX a description is at the end of this document
+  #               artifacts : [1,2,4,8,128]
+  #           #If below/above this value will set it to min/max
+  #           set_range:
+  #               pos_err : [0.5,5] # In arcsec
+  #       det_association :
+  #           table       : "tt_detections"
+  #           ref_table   : "tt_sources"
+  #           presel_type : "and"
+  #           sel_type    : "is_in"
+  #           var         : "fd_src_id"
+  #       coadd_det_quality:
+  #           table    : "tt_coadd_detections"
+  #           presel_type : "and"
+  #           sel_type : "and"  # These are all AND selections
+  #           range:
+  #               s2n            : [4,.inf]
+  #               r_fov          : [0.0,0.55]
             
-    obs_field_ids : !include field_ids.yaml
+  #   obs_field_ids : !include field_ids.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
