--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,10 @@ dependencies = [
   "scikit_learn ~= 1.2.2",
   "setuptools ~= 67.8.0",
   "regions ~= 0.7",
-  "pyyaml-include ~= 1.3"
+  "pyyaml-include ~= 1.3",
+  "ipywidgets ~= 8.0.6",
+  "ipympl ~= 0.9.3",
+  "jupyterlab ~= 4.0.2",
 ]
 
 [project.urls]
